...
    <string name="image_view">ImageView</string>
    <string name="search_event">Search Event</string>
    <string name="info_league">Info League</string>

    <string name="strLeague">Id League : %1$s\nName League : %2$s\nCountry League : %3$s\nSporty League : %4$s\nLogo League :</string>
    <string name="alertNextMatch">Next Match not found</string>
    <string name="alertSearch">Data not found</string>
    <string name="favorites">favorites</string>
    <string name="title_favorite_activity">Favorite List</string>
    <string name="title_search_activity">Search Event Soccer</string>
    <string name="alertEmptySearch">Please input search</string>
    <string name="tab_text_3">Team</string>
    <string name="title_search_activity_2">Search Team Soccer</string>

    <string name="tab_text_4">Standing</string>
    <string name="tab_text_5">Match</string>
</resources>
...
